--- a/our work.html
+++ b/our work.html
@@ -234,7 +234,14 @@
       <div class="project-card"><img src="project4.jpg" alt="Business Card"></div>
     </div>
   </section>
+  <p style="font-size: 1.5rem; text-align: center; margin: 40px 20px; color: #0d0235;">
+  Here are some of our projects, 
+  <a href="Signup.php" style="color: blue; text-decoration: none; font-weight: bold;">
+    login
+  </a> to see more 😊
+</p>
 
+  
   <section id="posters" class="section">
     <h2>Posters</h2>
     <div class="projects-grid">
