--- a/scanner.html
+++ b/scanner.html
@@ -2,25 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brand Vulnerability Scanner</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=JetBrains+Mono&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&family=JetBrains+Mono&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <link rel="icon" type="image/png" href="Chromaspark.png.jpeg" />
+  <link rel="icon" type="image/png" href="Chromaspark.png.jpeg">
   <style>
-    /* Reset */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
     body {
       margin: 0;
       padding: 0;
       font-family: 'JetBrains Mono', monospace;
       background-color: #05013d;
       color: #fdb43b;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
     header {
       text-align: center;
@@ -32,45 +29,42 @@
       font-size: 2rem;
       color: #05013d;
       letter-spacing: 2px;
-      margin-bottom: 0.5rem;
+      margin: 0;
     }
     header p {
       color: #fff;
       font-size: 1rem;
       max-width: 800px;
-      margin: 0 auto;
-      line-height: 1.4;
+      margin: 1rem auto 0 auto;
+      padding: 0 1rem;
     }
     main {
       max-width: 600px;
-      margin: 1.5rem auto 3rem;
-      padding: 2rem;
+      width: 90%;
+      margin: 1.5rem auto 3rem auto;
+      padding: 2rem 1rem;
       background-color: #1a1a1a;
       border-radius: 8px;
       box-shadow: 0 0 15px #00ffcc33;
+      flex-grow: 1;
     }
     label {
       display: block;
-      margin-top: 1.25rem;
+      margin-top: 1rem;
       font-weight: 600;
-      font-size: 1rem;
     }
-    input, select, textarea {
+    select {
       width: 100%;
       margin-top: 0.5rem;
-      padding: 0.75rem 1rem;
+      padding: 0.75rem;
       background-color: #111;
       color: #fdb43b;
       border: 1px solid #fdb43b;
       border-radius: 4px;
       font-size: 1rem;
-      font-family: inherit;
-      transition: border-color 0.3s ease;
-    }
-    input:focus, select:focus, textarea:focus {
-      outline: none;
-      border-color: #00ffcc;
-      background-color: #222;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
     }
     button {
       margin-top: 1.5rem;
@@ -86,7 +80,7 @@
       transition: background-color 0.3s ease;
     }
     button:hover {
-      background-color: #e0a620;
+      background-color: #d9a72c;
     }
     .results {
       display: none;
@@ -95,36 +89,36 @@
       padding: 1rem;
       border: 1px solid #fdb43b;
       border-radius: 6px;
+      color: #fdb43b;
     }
     .results h2 {
-      color: #fdb43b;
-      margin-bottom: 0.5rem;
+      margin-top: 0;
     }
     .score {
       font-size: 1.2rem;
       color: #ff3c38;
-      font-weight: 700;
+      font-weight: bold;
     }
     canvas {
       margin-top: 2rem;
-      max-width: 100% !important;
+      width: 100% !important;
       height: auto !important;
     }
     #downloadBtn {
       margin-top: 1rem;
       background-color: #fdb43b;
       color: #000;
+      width: 100%;
+      font-weight: bold;
     }
 
-    /* Navbar */
+    /* Navbar styling */
     nav.navbar {
-      background-color: #05013d;
-      color: white;
+      background-color: #0d0235;
       padding: 10px 20px;
       position: sticky;
       top: 0;
-      z-index: 9999;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.6);
+      z-index: 1000;
     }
     .navbar-container {
       display: flex;
@@ -132,10 +126,9 @@
       align-items: center;
       max-width: 1200px;
       margin: 0 auto;
-      flex-wrap: wrap;
     }
     .navbar-logo {
-      font-family: 'Arial', sans-serif;
+      font-family: Arial, sans-serif;
       font-size: 1.8rem;
       font-weight: bold;
       text-decoration: none;
@@ -148,9 +141,10 @@
       height: 60px;
       margin-right: 10px;
       border-radius: 300px;
-      object-fit: contain;
+      object-fit: cover;
     }
     .navbar-links {
+      font-family: Arial, sans-serif;
       list-style: none;
       display: flex;
       gap: 20px;
@@ -167,71 +161,31 @@
       padding: 8px 15px;
       border-radius: 5px;
       transition: background-color 0.3s ease;
-      white-space: nowrap;
     }
     .navbar-links a:hover {
       background-color: #fdb43b;
       color: #05013d;
     }
 
-    /* Mobile menu toggle */
-    .menu-toggle {
-      display: none;
-      flex-direction: column;
-      cursor: pointer;
-    }
-    .menu-toggle .bar {
-      width: 25px;
-      height: 3px;
-      background-color: white;
-      margin: 4px 0;
-      transition: 0.4s;
-      border-radius: 2px;
-    }
-
-    /* Responsive */
-    @media (max-width: 700px) {
-      main {
-        margin: 1rem;
-        padding: 1.5rem;
-      }
+    /* Responsive adjustments */
+    @media (max-width: 640px) {
       header h1 {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
       }
-      label {
-        font-size: 0.95rem;
-      }
-      input, select, textarea, button {
-        font-size: 1rem;
-      }
-
-      .navbar-links {
-        flex-direction: column;
-        width: 100%;
-        display: none; /* hidden by default on mobile */
-        background-color: #05013d;
-        margin-top: 10px;
-      }
-      .navbar-links.active {
-        display: flex;
-      }
-      .navbar-links li {
-        width: 100%;
-      }
-      .navbar-links a {
-        padding: 12px 20px;
-        display: block;
-      }
-
-      .menu-toggle {
-        display: flex;
+      main {
+        width: 95%;
+        padding: 1.5rem 1rem;
       }
       .navbar-logo-img {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
       }
-      .navbar-logo {
-        font-size: 1.4rem;
+      .navbar-links a {
+        font-size: 1rem;
+        padding: 6px 10px;
+      }
+      button {
+        font-size: 1rem;
       }
     }
   </style>
@@ -243,14 +197,9 @@
         <img src="Chromaspark.png.jpeg" alt="Chroma Spark Logo" class="navbar-logo-img" />
         Chroma Spark
       </a>
-      <ul class="navbar-links" id="navbar-links">
+      <ul class="navbar-links">
         <li><a href="SeniorProject.html">Back To Home</a></li>
       </ul>
-      <div class="menu-toggle" id="mobile-menu" aria-label="Toggle menu" tabindex="0" role="button">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
     </div>
   </nav>
 
@@ -263,16 +212,181 @@
 
   <main>
     <form id="scanForm">
-      <!-- Questions (truncated here for brevity) -->
-      <!-- Repeat your labels and selects here as before, e.g.: -->
       <label>Is your logo readable on mobile?</label>
       <select name="mobile" required>
         <option value="yes">Yes</option>
         <option value="no">No</option>
       </select>
-      <!-- Add all other questions here... -->
 
-      <!-- (Include all your questions exactly as in your original form) -->
+      <label>Are CTAs clearly visible?</label>
+      <select name="contrast" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is your font size readable on all devices?</label>
+      <select name="font" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Are design elements consistent across pages?</label>
+      <select name="consistency" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is your site using HTTPS?</label>
+      <select name="security" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is your design accessible (alt text, contrast)?</label>
+      <select name="accessibility" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is the loading speed optimized?</label>
+      <select name="loading" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Does your design follow a grid layout?</label>
+      <select name="grid" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Are your colors balanced and accessible?</label>
+      <select name="color" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Are animations smooth and purposeful?</label>
+      <select name="animation" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Are your icons meaningful and clear?</label>
+      <select name="icons" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <!-- Brand Security Questions -->
+      <label>Is your brand trademark registered?</label>
+      <select name="trademark_registered" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Do you monitor for unauthorized use of your brand assets?</label>
+      <select name="brand_monitoring" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Are your digital brand assets (logos, fonts) stored securely?</label>
+      <select name="asset_security" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is access to your brand’s design files restricted to authorized personnel only?</label>
+      <select name="access_control" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Do you have a plan to respond to brand impersonation or phishing?</label>
+      <select name="brand_response_plan" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <!-- Additional Logo and Brand Identity Questions -->
+      <label>Is your logo unique and not easily confused with competitors?</label>
+      <select name="logo_uniqueness" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Does your logo scale well across different mediums (web, print, mobile)?</label>
+      <select name="logo_scalability" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is your logo memorable and easily recognizable?</label>
+      <select name="logo_memorability" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Does your brand identity reflect your company’s mission and values?</label>
+      <select name="brand_alignment" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Do you use a consistent logo placement and usage guide?</label>
+      <select name="logo_guidelines" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Does your logo scale well to different sizes (e.g. social icons, billboards)?</label>
+      <select name="logo_scalability" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Does your logo look good in black & white?</label>
+      <select name="logo_bw" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is your logo conceptually meaningful (does it tell a story)?</label>
+      <select name="logo_meaning" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Does your visual identity reflect your target audience?</label>
+      <select name="audience_alignment" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Do your logo and brand visuals stand out from competitors?</label>
+      <select name="uniqueness" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Are your brand fonts consistent across print and digital materials?</label>
+      <select name="font_consistency" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Is your brand identity documented in a style guide?</label>
+      <select name="style_guide" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
+
+      <label>Do you regularly review or update your brand design?</label>
+      <select name="brand_update" required>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+      </select>
 
       <button type="submit">Run Scan</button>
     </form>
@@ -288,31 +402,14 @@
 
     <form id="logoForm" enctype="multipart/form-data" style="margin-top: 2rem;">
       <label>Upload Logo:</label>
-      <input type="file" name="logo" accept="image/*" required />
+      <input type="file" name="logo" accept="image/*" required>
       <button type="submit">Analyze</button>
     </form>
+
     <div id="logoResult" style="margin-top: 1rem;"></div>
   </main>
 
   <script>
-    // Mobile menu toggle
-    const menuToggle = document.getElementById('mobile-menu');
-    const navbarLinks = document.getElementById('navbar-links');
-
-    menuToggle.addEventListener('click', () => {
-      navbarLinks.classList.toggle('active');
-      menuToggle.classList.toggle('active');
-    });
-
-    // Accessibility: allow toggle on Enter key for keyboard users
-    menuToggle.addEventListener('keydown', e => {
-      if (e.key === 'Enter' || e.key === ' ') {
-        e.preventDefault();
-        menuToggle.click();
-      }
-    });
-
-    // Your existing form & results JS (unchanged) ...
     const form = document.getElementById('scanForm');
     const results = document.getElementById('results');
     const downloadBtn = document.getElementById('downloadBtn');
@@ -322,21 +419,22 @@
       'Accessibility', 'Speed', 'Grid Layout', 'Color Palette', 'Animation', 'Icons',
       'Trademark Registered', 'Brand Monitoring', 'Asset Security', 'Access Control',
       'Brand Response Plan', 'Logo Uniqueness', 'Logo Scalability', 'Logo Memorability',
-      'Brand Alignment', 'Logo Guidelines'
+      'Brand Alignment', 'Logo Guidelines', 'Logo Scalability', 'Logo Black/White',
+      'Logo Meaning', 'Audience Alignment', 'Visual Uniqueness',
+      'Font Consistency', 'Style Guide', 'Brand Update'
     ];
-
-    let values = [];
 
     form.addEventListener('submit', function (e) {
       e.preventDefault();
-      values = [];
-
+      let values = [];
       const fields = [
         'mobile', 'contrast', 'font', 'consistency', 'security', 'accessibility',
         'loading', 'grid', 'color', 'animation', 'icons',
         'trademark_registered', 'brand_monitoring', 'asset_security', 'access_control',
         'brand_response_plan', 'logo_uniqueness', 'logo_scalability',
-        'logo_memorability', 'brand_alignment', 'logo_guidelines', 'logo_scalability', 'logo_bw', 'logo_meaning', 'audience_alignment', 'uniqueness', 'font_consistency', 'style_guide', 'brand_update'
+        'logo_memorability', 'brand_alignment', 'logo_guidelines', 'logo_scalability',
+        'logo_bw', 'logo_meaning', 'audience_alignment', 'uniqueness', 'font_consistency',
+        'style_guide', 'brand_update'
       ];
 
       let score = 100;
@@ -373,8 +471,8 @@
         brand_update: 'Brand Design Updates'
       };
 
-      fields.forEach((field) => {
-        const value = form[field]?.value;
+      fields.forEach(field => {
+        const value = form[field].value;
         if (value === 'no') {
           score -= 5;
           feedback.push(`⚠️ ${labelMap[field]} needs attention.`);
