--- a/Our Customers.html
+++ b/Our Customers.html
@@ -257,7 +257,7 @@
 <body>
   <nav class="navbar">
     <div class="navbar-container">
-      <a href="SeniorProject.html" class="navbar-logo">
+      <a href="index.php" class="navbar-logo">
         <img src="Chromaspark.png.jpeg" alt="Chroma Spark Logo" class="navbar-logo-img" />
         Chroma Spark
       </a>
