--- a/scanner.html
+++ b/scanner.html
@@ -198,7 +198,7 @@
         Chroma Spark
       </a>
       <ul class="navbar-links">
-        <li><a href="SeniorProject.html">Back To Home</a></li>
+        <li><a href="index.php">Back To Home</a></li>
       </ul>
     </div>
   </nav>
